--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header{
+  text-align: center;
+}
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav > a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+figcaption{
+  text-align: center;
+  font-size: medium;
+}
+#featured-property > p {
+  display: block;
+  text-align: center;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+#details{
+  display: flex;
+  background-color: red;
+  text-align: center;
+  justify-content: space-around;
+}
